app01/mzdatastreamlit.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mzdatastreamlit
spec:
  ports:
    - name: mzdatastreamlit
      port: 80
      targetPort: 8501
  selector:
    app: mzdatastreamlit

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mzdatastreamlit
spec:
  selector:
    matchLabels:
      app: mzdatastreamlit
  replicas: 1
  template:
    metadata:
      labels:
        app: mzdatastreamlit
    spec:
      volumes:
        - name: appdatadirectory
          hostPath:
            path: /mnt/c/ws/consolidated-data-by-symbol
      containers:
        - name: mzdatastreamlit
          image: ghcr.io/mnsrulz/mztradingdata-streamlit:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501          
          volumeMounts:
            - mountPath: /APP_DATA
              name: appdatadirectory
