app01/nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - name: nginx
      port: 80
      targetPort: 80
  selector:
    app: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # volumes:
      #   - name: staticdirectory
      #     hostPath:
      #       path: /home/madhu/live 
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          # env:
          #   - name: SERVER_ROOT
          #     value: "./pserve"
          #   - name: SERVER_DIRECTORY_LISTING
          #     value: "true"
          # volumeMounts:
          #   - mountPath: /pserve
          #     name: staticdirectory
