app01/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30080    # Access HTTP: http://localhost:30080
    - name: websecure
      port: 443
      targetPort: 443
      nodePort: 30443    # Access HTTPS: https://localhost:30443
    - name: dashboard
      port: 8080
      targetPort: 8080
      nodePort: 32080    # Traefik dashboard: http://localhost:32080/dashboard/
