app01/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /nginxserver
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /helloworld
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
          - path: /mzdata
            pathType: Prefix
            backend:
              service:
                name: mzdatastreamlit
                port:
                  number: 80
